# monitor-ram-for-expired-lake-formation-invites

./: .gitignore  LICENSE  README.md  pyproject.toml  quality.sh  samconfig.toml  template.yaml
events/: check_ram_invites.json
resources/: lf-expired-ram-monitor-diagrams.pptx
src/: requirements.txt
src/lf_stale_ram_invite_monitor/: ddb_manager.py  lambda_handler.py  ram_manager.py
tests/: requirements.txt
tests/unit/: test_main.py
utility/: fix_lakeformation_ram_invites.py
