[tool.poetry]
name = "lf-stale-permissions-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
boto3 = "^1.34.149"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.111"
aws-xray-sdk = "^2.13.1"
isort = "^5.13.2"
pylint = "^3.2.2"
black = "^24.4.2"
moto = {extras = ["ec2", "glue", "lakeformation", "s3", "sts"], version = "^5.0.7"}
pytest = "^8.2.1"
aws-lambda-powertools = "^2.38.1"
coverage = "^7.5.1"
bandit = {extras = ["toml"], version = "^1.7.8"}

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.pylint.messages_control]
max-line-length = 300

[tool.black]
line-length = 300

[tool.isort]
line_length = 300

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
